PLAT-41158: Fix overflow of document teasers in search results.

--- a/search-ui-frontend/src/style/bootstrap/attivio-search-results.less
+++ b/search-ui-frontend/src/style/bootstrap/attivio-search-results.less
@@ -132,12 +132,14 @@
 }
 .attivio-search-result-desc {
 	font-size: 0.9285714285714em; /* 13px /14 */
-	max-width: 53.84615384615em; /* 700px /13 */
+  max-width: 53.84615384615em; /* 700px /13 */
+  word-wrap: break-word;
 }
 .attivio-search-result-desc-2col,
 .attivio-search-result-debugger {
 	float: left;
 	width: ~"calc( 100% - 11.53846153846em )"; /* 150px /13 */
+  word-wrap: break-word;
 }
 .attivio-search-result .attivio-tags.attivio-tags-vertical {
 	float: right;
